sql-common/my_time.c
@@ -76,7 +76,7 @@ uint calc_days_in_year(uint year)
 */
 
 my_bool check_date(const MYSQL_TIME *ltime, my_bool not_zero_date,
-                   ulong flags, int *was_cut)
+                   ulonglong flags, int *was_cut)
 {
   if (not_zero_date)
   {
@@ -158,7 +158,7 @@ my_bool check_date(const MYSQL_TIME *ltime, my_bool not_zero_date,
 
 enum enum_mysql_timestamp_type
 str_to_datetime(const char *str, uint length, MYSQL_TIME *l_time,
-                uint flags, int *was_cut)
+                ulonglong flags, int *was_cut)
 {
   uint field_length, UNINIT_VAR(year_length), digits, i, number_of_fields;
   uint date[MAX_DATE_PARTS], date_len[MAX_DATE_PARTS];
@@ -1109,7 +1109,7 @@ int my_TIME_to_str(const MYSQL_TIME *l_time, char *to)
 */
 
 longlong number_to_datetime(longlong nr, MYSQL_TIME *time_res,
-                            uint flags, int *was_cut)
+                            ulonglong flags, int *was_cut)
 {
   long part1,part2;
 
