strings/my_vsnprintf.c
@@ -36,7 +36,6 @@ struct pos_arg_info
   uint have_longlong;                         /* used from integer values */
   char *str_arg;                              /* string value of the arg */
   longlong longlong_arg;                      /* integer value of the arg */
-  double double_arg;                          /* double value of the arg */
 };
 
 
@@ -235,19 +234,23 @@ static char *process_int_arg(char *to, char *end, size_t length,
     store_start= buff;
 
   if (arg_type == 'd')
-    store_end= int10_to_str(par, store_start, -10);
+    store_end= longlong10_to_str(par, store_start, -10);
   else if (arg_type == 'u')
-    store_end= int10_to_str(par, store_start, 10);
+    store_end= longlong10_to_str(par, store_start, 10);
   else if (arg_type == 'p')
   {
     store_start[0]= '0';
     store_start[1]= 'x';
-    store_end= int2str(par, store_start + 2, 16, 0);
+    store_end= ll2str(par, store_start + 2, 16, 0);
+  }
+  else if (arg_type == 'o')
+  {
+    store_end= ll2str(par, store_start, 8, 0);
   }
   else
   {
     DBUG_ASSERT(arg_type == 'X' || arg_type =='x');
-    store_end= int2str(par, store_start, 16, (arg_type == 'X'));
+    store_end= ll2str(par, store_start, 16, (arg_type == 'X'));
   }
 
   if ((res_length= (size_t) (store_end - store_start)) > to_length)
@@ -369,14 +372,11 @@ start:
       case 'b':
         args_arr[i].str_arg= va_arg(ap, char *);
         break;
-      case 'f':
-      case 'g':
-        args_arr[i].double_arg= va_arg(ap, double);
-        break;
       case 'd':
       case 'u':
       case 'x':
       case 'X':
+      case 'o':
       case 'p':
         if (args_arr[i].have_longlong)
           args_arr[i].longlong_arg= va_arg(ap,longlong);
@@ -395,21 +395,23 @@ start:
     /* Print result string */
     for (i= 0; i <= idx; i++)
     {
-      uint width= 0, length= 0;
+      size_t width= 0, length= 0;
       switch (print_arr[i].arg_type) {
       case 's':
       {
         char *par= args_arr[print_arr[i].arg_idx].str_arg;
-        width= (print_arr[i].flags & WIDTH_ARG) ?
-          args_arr[print_arr[i].width].longlong_arg : print_arr[i].width;
+        width= (print_arr[i].flags & WIDTH_ARG)
+          ? (size_t)args_arr[print_arr[i].width].longlong_arg
+          : print_arr[i].width;
         to= process_str_arg(cs, to, end, width, par, print_arr[i].flags);
         break;
       }
       case 'b':
       {
         char *par = args_arr[print_arr[i].arg_idx].str_arg;
-        width= (print_arr[i].flags & WIDTH_ARG) ?
-          args_arr[print_arr[i].width].longlong_arg : print_arr[i].width;
+        width= (print_arr[i].flags & WIDTH_ARG)
+          ? (size_t)args_arr[print_arr[i].width].longlong_arg
+          : print_arr[i].width;
         to= process_bin_arg(to, end, width, par);
         break;
       }
@@ -424,12 +426,14 @@ start:
       case 'u':
       case 'x':
       case 'X':
+      case 'o':
       case 'p':
       {
         /* Integer parameter */
         longlong larg;
-        length= (print_arr[i].flags & LENGTH_ARG) ?
-          args_arr[print_arr[i].length].longlong_arg : print_arr[i].length;
+        length= (print_arr[i].flags & LENGTH_ARG)
+          ? (size_t)args_arr[print_arr[i].length].longlong_arg
+          : print_arr[i].length;
 
         if (args_arr[print_arr[i].arg_idx].have_longlong)
           larg = args_arr[print_arr[i].arg_idx].longlong_arg;
@@ -571,7 +575,7 @@ size_t my_vsnprintf_ex(CHARSET_INFO *cs, char *to, size_t n,
       continue;
     }
     else if (*fmt == 'd' || *fmt == 'u' || *fmt == 'x' || *fmt == 'X' ||
-             *fmt == 'p')
+             *fmt == 'p' || *fmt == 'o')
     {
       /* Integer parameter */
       longlong larg;
